crates/diskuse/tests/snapshots/many_a_page_down@linux-d4096-s0.snap
---
source: tests/browse.rs
---
/many  1.3 MiB | scanned 0 s ago
   1.3 MiB  many/      96.0 KiB   7.4% f24
                       92.0 KiB   7.1% f23
                       88.0 KiB   6.7% f22
                       84.0 KiB   6.4% f21
                       80.0 KiB   6.1% f20
                       76.0 KiB   5.8% f19
                       72.0 KiB   5.5% f18
                       68.0 KiB   5.2% f17
                       64.0 KiB   4.9% f16
                       60.0 KiB   4.6% f15
                       56.0 KiB   4.3% f14
                       52.0 KiB   4.0% f13
                       48.0 KiB   3.7% f12
                       44.0 KiB   3.4% f11
                       40.0 KiB   3.1% f10
                       36.0 KiB   2.8% f09
                       32.0 KiB   2.5% f08
f08 | 32.0 KiB
hjkl move  i info  u units  space pick  p picks  r reveal  s/S rescan  / filter  ? help  q quit
--- styles ---
 0   7..14  BOLD
 0  14..17  DarkGray
 1   0..12  White on DarkGray
 1  12..17  White on DarkGray BOLD
 1  17..20  White on DarkGray
 1  21..31  Green
 1  31..32  DarkGray
 1  33..38  Green
 2  21..31  Green
 2  31..32  DarkGray
 2  33..38  Green
 3  21..31  Green
 3  31..32  DarkGray
 3  33..38  Green
 4  21..31  Green
 4  31..32  DarkGray
 4  33..38  Green
 5  21..31  Green
 5  31..32  DarkGray
 5  33..38  Green
 6  21..31  Green
 6  31..32  DarkGray
 6  33..38  Green
 7  21..31  Green
 7  31..32  DarkGray
 7  33..38  Green
 8  21..31  Green
 8  31..32  DarkGray
 8  33..38  Green
 9  21..31  Green
 9  31..32  DarkGray
 9  33..38  Green
10  21..31  Green
10  31..32  DarkGray
10  33..38  Green
11  21..31  Green
11  31..32  DarkGray
11  33..38  Green
12  21..31  Green
12  31..32  DarkGray
12  33..38  Green
13  21..31  Green
13  31..32  DarkGray
13  33..38  Green
14  21..31  Green
14  31..32  DarkGray
14  33..38  Green
15  21..31  Green
15  31..32  DarkGray
15  33..38  Green
16  21..31  Green
16  31..32  DarkGray
16  33..38  Green
17  21..70  Indexed(231) on Indexed(25) BOLD
18   3..6   DarkGray
18   6..14  Green
19   0..4   Cyan BOLD
19  11..12  Cyan BOLD
19  19..20  Cyan BOLD
19  28..33  Cyan BOLD
19  40..41  Cyan BOLD
19  49..50  Cyan BOLD
19  59..62  Cyan BOLD
19  71..72  Cyan BOLD
19  81..82  Cyan BOLD
19  89..90  Cyan BOLD
